--- a/JpaLesson1/src/main/resources/application.yml
+++ b/JpaLesson1/src/main/resources/application.yml
@@ -10,3 +10,8 @@ spring:
     username: root
     password: blessing
     url: jdbc:mysql://localhost:3306/javaspace?serverTimezone=UTC&createDatabaseIfNotExist=true
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
